--- a/new_order.html
+++ b/new_order.html
@@ -2,9 +2,9 @@
 
 <html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<link rel="stylesheet" href="../layui/css/layui.css">
-		<script src="../layui/layui.js"></script>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<link rel="stylesheet" href="/resources/layui/css/layui.css" />
+		<script src="/resources/layui/layui.js"></script>
 		<script type="text/javascript">
 			// function canuse(){
 			// 	var phonenumber = <%=(String)session.getAttribute("user") %>
@@ -15,12 +15,12 @@
 			// 		return false;
 			// 	}
 			// }
-			layui.use('laydate', function() {
+			layui.use("laydate", function() {
 				var laydate = layui.laydate;
 
 				//执行一个laydate实例
 				laydate.render({
-					elem: '#ex_time' //指定元素
+					elem: "#ex_time", //指定元素
 				});
 			});
 
@@ -28,57 +28,52 @@
 				window.history.go(-1);
 			}
 
-			function check() {
-				var phones = document.getElementById("phone").value;
-				var ex_amounts = document.getElementById("ex_amount").value;
-				var ex_times = document.getElementById("ex_time").value;
-				if (phones == "" || ex_amounts == "" || ex_times == "") {
-					alert("信息填充不全！");
-					return false;
-				}
-				if (isNaN(phones) || phones.length != 11) {
-					alert("手机号输入有误！");
-					return false;
-				}
-				if (isNaN(ex_amounts)) {
-					alert("支出金额输入有误！");
-					return false;
-				}
-				alert("添加工时记录成功！即将返回主菜单...");
-				location.href("/resources/templates/main.html");
-				return true;
-			}
+			// function check() {
+			// 	var phones = document.getElementById("phone").value;
+			// 	var ex_amounts = document.getElementById("ex_amount").value;
+			// 	var ex_times = document.getElementById("ex_time").value;
+			// 	if (phones == "" || ex_amounts == "" || ex_times == "") {
+			// 		alert("信息填充不全！");
+			// 		return false;
+			// 	}
+			// 	if (isNaN(phones) || phones.length != 11) {
+			// 		alert("手机号输入有误！");
+			// 		return false;
+			// 	}
+			// 	if (isNaN(ex_amounts)) {
+			// 		alert("支出金额输入有误！");
+			// 		return false;
+			// 	}
+			// 	return true;
+			// }
 		</script>
 		<meta charset="utf-8" />
-		<title>增加工时卡记录</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>增加员工信息</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta content="A fully featured admin theme which can be used to build CRM, CMS, etc." name="description" />
 		<meta content="Coderthemes" name="author" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<!-- App favicon -->
-		<link rel="shortcut icon" href="../assets/images/favicon.ico">
+		<link rel="shortcut icon" href="/resources/assets/images/favicon.ico" />
 
 		<!-- App css -->
-		<link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-		<link href="../css/icons.min.css" rel="stylesheet" type="text/css" />
-		<link href="../css/app.min.css" rel="stylesheet" type="text/css" />
+		<link href="/resources/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+		<link href="/resources/css/icons.min.css" rel="stylesheet" type="text/css" />
+		<link href="/resources/css/app.min.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
 		<!-- Begin page -->
 		<div id="wrapper">
-
 			<!-- ========== Left Sidebar Start ========== -->
 			<div class="left-side-menu">
-
 				<div class="slimscroll-menu">
-
 					<!-- LOGO -->
-					<a href="MainServlet" class="logo text-center mb-4">
+					<a href="#" class="logo text-center mb-4">
 						<span class="logo-lg">
-							<img src="../assets/images/logo.png" alt="" height="50">
+							<img src="/resources/assets/images/logo.png" alt="" height="50" />
 						</span>
 						<span class="logo-sm">
-							<img src="../assets/images/logo-sm.png" alt="" height="24">
+							<img src="/resources/assets/images/logo-sm.png" alt="" height="24" />
 						</span>
 					</a>
 
@@ -86,8 +81,9 @@
 					<div id="sidebar-menu">
 						<ul class="metismenu" id="side-menu">
 							<li class="menu-title">基础功能</li>
+
 							<li>
-								<a href="#">
+								<a href="/resources/templates/main.html">
 									<i class="fe-airplay"></i>
 									<span> 个人主页 </span>
 								</a>
@@ -100,28 +96,28 @@
 								</a>
 								<ul class="nav-second-level" aria-expanded="false">
 									<li>
-										<a href="MakeUser.jsp" onclick="return canuse()">新建订单</a>
+										<a href="/showOrder" onclick="return canuse()">新建订单</a>
 									</li>
 									<li>
-										<a href="getUserServlet" onclick="return canuse()">修改订单</a>
+										<a href="/updateOrder" onclick="return canuse()">修改订单</a>
 									</li>
 								</ul>
 							</li>
 							<li>
-								<a href="#">
+								<a href="/timecard">
 									<i class="fe-type"></i>
 									<span> 维护工时卡 </span>
 								</a>
 							</li>
 							<li>
-								<a href="#">
+								<a href="/updatePay">
 									<i class="fe-bar-chart-2"></i>
 									<span> 选择支付方式 </span>
 								</a>
 							</li>
-					
+
 							<li>
-								<a href="#">
+								<a href="employee_report.html">
 									<i class="mdi mdi-account-heart"></i>
 									<span> 生成员工报告</span>
 								</a>
@@ -129,16 +125,16 @@
 							<li class="menu-title">高级功能</li>
 							<li>
 								<a href="javascript: void(0);">
-									<i class="layui-icon layui-icon-auz"></i>   
+									<i class="fe-cpu"></i>
 									<span> 管理功能 </span>
 									<span class="menu-arrow"></span>
 								</a>
 								<ul class="nav-second-level" aria-expanded="false">
 									<li>
-										<a href="#" onclick="return canuse()">维护员工信息</a>
+										<a href="employee_info.html" onclick="return canuse()">维护员工信息</a>
 									</li>
 									<li>
-										<a href="#" onclick="return canuse()">管理员工报告</a>
+										<a href="admin_report.html" onclick="return canuse()">管理员工报告</a>
 									</li>
 								</ul>
 							</li>
@@ -147,10 +143,8 @@
 					<!-- End Sidebar -->
 
 					<div class="clearfix"></div>
-
 				</div>
 				<!-- Sidebar -left -->
-
 			</div>
 			<!-- Left Sidebar End -->
 			<!-- ============================================================== -->
@@ -159,25 +153,24 @@
 
 			<div class="content-page">
 				<div class="content">
-
 					<!-- Topbar Start -->
 					<div class="navbar-custom">
 						<ul class="list-unstyled topbar-right-menu float-right mb-0">
 							<li class="dropdown notification-list">
 								<a class="nav-link dropdown-toggle nav-user mr-0" data-toggle="dropdown" href="#"
 									role="button" aria-haspopup="false" aria-expanded="false">
-									<img src="../assets/images/users/avatar-1.jpg" alt="user-image"
-										class="rounded-circle">
-									<small class="pro-user-name ml-1">
-										{{.showUsername}}
-									</small>
+									<img src="/resources/assets/images/users/avatar-1.jpg" alt="user-image"
+										class="rounded-circle" />
+									<small class="pro-user-name ml-1"> {{.showUsername}} </small>
 								</a>
-								<div class="dropdown-menu dropdown-menu-right dropdown-menu-animated profile-dropdown ">
+								<div class="
+                    dropdown-menu dropdown-menu-right dropdown-menu-animated
+                    profile-dropdown
+                  ">
 									<!-- item-->
 									<div class="dropdown-header noti-title">
 										<h6 class="text-overflow m-0">Welcome !</h6>
 									</div>
-
 									<!-- item-->
 									<a href="javascript:void(0);" class="dropdown-item notify-item">
 										<i class="fe-user"></i>
@@ -205,7 +198,6 @@
 									</a>
 								</div>
 							</li>
-
 						</ul>
 						<button class="button-menu-mobile open-left disable-btn">
 							<i class="fe-menu"></i>
@@ -213,10 +205,9 @@
 						<div class="app-search">
 							<form>
 								<div class="input-group">
-									<input type="text" class="form-control" placeholder="No Search..." disabled>
-									<div class="input-group-append">
-
-									</div>
+									<input type="text" class="form-control" placeholder="No Search/resources."
+										disabled />
+									<div class="input-group-append"></div>
 								</div>
 							</form>
 						</div>
@@ -224,113 +215,121 @@
 					<!-- end Topbar -->
 					<!-- Start Content-->
 					<div class="container-fluid">
-						<form action="addExpenseServlet" method="post">
+						<form action="#" method="get">
 							<table class="layui-table">
 								<tr>
 									<th colspan="2" align="center">
-										<span style="text-align:center">【新增工时记录】</span>
+										<span style="text-align: center">【添加的订单信息】</span>
 									</th>
 								</tr>
 								<!-- <tr>
-									<th width=200px>
-										<span>客户联系方式</span>
+					        <th width="200px">
+					          <span>姓名</span>
+					        </th>
+					        <td align="center">
+					          <input
+					            type="text"
+					            name="phone"
+					            id="phone"
+					            class="layui-input"
+					          />
+					        </td>
+					      </tr>
+					      <tr>
+					        <th>
+					          <span>密码 </span>
+					        </th>
+					        <td align="center">
+					          <input
+					            type="text"
+					            name="ex_amount"
+					            id="ex_amount"
+					            class="layui-input"
+					          />
+					        </td>
+					      </tr> -->
+								<tr>
+									<th>
+										<span>订单编号</span>
 									</th>
 									<td align="center">
-										<input type="text" name="phone" id="phone" class="layui-input">
+										<input style="border: 0" type="text" name="orderID" value="{{.OrderID}}"
+											class="layui-input" readonly="readonly" />
 									</td>
 								</tr>
 								<tr>
 									<th>
-										<span>客户地址 </span>
+										<span>联系方式</span>
 									</th>
 									<td align="center">
-										<input type="text" name="ex_amount" id="ex_amount" class="layui-input">
-									</td>
-								</tr> -->
-								<tr>
-									<th>
-										<span>项目号码</span>
-									</th>
-									<td align="center">
-										<span>
-											<select name="kind" data-plugin="customselect">
-												<option value="衣服">衣服</option>
-												<option value="篮球">篮球 </option>
-												<option value="钢笔">钢笔</option>
-												<option value="空调">空调</option>
-											</select>
-										</span>
-									</td>
-
-								</tr>
-								<tr>
-									<th>
-										<span>工作时长</span>
-									</th>
-									<td align="center">
-										<input type="text" name="cost" id="cost" class="layui-input">
+										<input style="border: 0" type="text" name="contact" id="contact" value="{{.Contact}}"
+											class="layui-input" readonly="readonly" />
 									</td>
 								</tr>
 								<tr>
 									<th>
-										<span>日期</span>
+										<span>客户地址</span>
 									</th>
 									<td align="center">
-										<input type="text" name="ex_time" id="ex_time" class="layui-input"
-											placeholder="YYYY-MM-DD">
+										<input type="text" style="border: 0" name="address" id="address" value="{{.Address}}"
+											class="layui-input" readonly="readonly" />
 									</td>
 								</tr>
 								<tr>
 									<th>
-										<span>备注</span>
+										<span>商品名称</span>
 									</th>
 									<td align="center">
-										<input type="text" name="ex_note" id="ex_note" value="无" class="layui-input">
+										<input type="text" style="border: 0" readonly="readonly" name="productName" id="productName"
+											class="layui-input" value="{{.ProductName}}" />
 									</td>
 								</tr>
-
+								<tr>
+									<th>
+										<span>消费金额</span>
+									</th>
+									<td align="center">
+										<input type="text" style="border: 0" readonly="readonly" name="amount" id="amount"
+											class="layui-input" value="{{.Amount}}" />
+									</td>
+								</tr>
+								<tr>
+									<th>
+										<span>消费时间</span>
+									</th>
+									<td align="center">
+										<input type="text" style="border: 0" readonly="readonly" value="{{.Date}}"
+											name="date" id="date" class="layui-input" />
+									</td>
+								</tr>
 								<tr>
 									<td colspan="2">
-										<input type="submit" value="确认" id="makeadd" class="btn btn-success"
-											onclick="return check()">
-										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-										<input type="button" value="取消" id="disadd" class="btn btn-danger"
-											onclick="back()">
+										<a href="/resources/templates/main.html"
+											class="layui-btn layui-btn-normal">返回主菜单</a>
 									</td>
 								</tr>
 							</table>
 						</form>
-
-
-					</div> <!-- container -->
-
-				</div> <!-- content -->
-
-
+					</div>
+					<!-- container -->
+				</div>
+				<!-- content -->
 			</div>
 
 			<!-- ============================================================== -->
 			<!-- End Page content -->
 			<!-- ============================================================== -->
-
-
 		</div>
 		<!-- END wrapper -->
 
 		<!-- App js -->
-		<script src="../js/vendor.min.js"></script>
-		<script src="../js/app.min.js"></script>
+		<script src="/resources/js/vendor.min.js"></script>
+		<script src="/resources/js/app.min.js"></script>
 
 		<!-- Plugins js -->
-		<script src="../js/vendor/Chart.bundle.js"></script>
-		<script src="../js/vendor/jquery.sparkline.min.js"></script>
-		<script src="../js/vendor/jquery.knob.min.js"></script>
-
-		<script src="../js/pages/dashboard.init.js"></script>
+		<script src="/resources/js/vendor/Chart.bundle.js"></script>
+		<script src="/resources/js/vendor/jquery.sparkline.min.js"></script>
+		<script src="/resources/js/vendor/jquery.knob.min.js"></script>
+		<script src="/resources/js/pages/dashboard.init.js"></script>
 	</body>
 </html>
